# MartyCam

./: .gitignore  .gitmodules  CMakeLists.txt  ConcurrentCircularBuffer.h  DatePopup.cpp  DatePopup.h  DecayFilter.cpp  DecayFilter.h  FaceRecogFilter.cpp  FaceRecogFilter.hpp  GraphUpdateFilter.cpp  GraphUpdateFilter.h  INSTALL.txt  IPCameraForm.cpp  IPCameraForm.h  IPCameraForm.ui  MotionFilter.cpp  MotionFilter.h  PSNRFilter.cpp  PSNRFilter.h  README.md  capturethread.cpp  capturethread.h  filter.cpp  filter.h  imagebuffer.cpp  imagebuffer.h  main.cpp  martycam.cpp  martycam.h  martycam.ui  processingthread.cpp  processingthread.h  renderwidget.cpp  renderwidget.h  settings.cpp  settings.h  settings.ui  trackcontroller.cpp  trackcontroller.h
AnalogWidgets/: CMakeLists.txt  Flags.pri
AnalogWidgets/analogwidgets/analogwidgets/: chart.h
AnalogWidgets/analogwidgets/code/: bitmapbutton.cpp  chart.cpp  code.pro  manometer.cpp  thermometer.cpp
AnalogWidgets/analogwidgets/code/chart/: scalegrid.cpp
AnalogWidgets/analogwidgets/plugins/: plugins.pro
AnalogWidgets/scripttool/: scripttool.pro
AnalogWidgets/test/: main.cpp  test.cpp  test.h  test.pro  test.qrc  testform.ui
images/.svn/: entries
test/: CMakeLists.txt  OpenCVCameraTest.cpp
webcam_test/: CMakeLists.txt  hpx_opencv_webcam.cpp  system_characteristics.hpp
